# ar-llm-browser

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  llmini.py  main.py  pyproject.toml  requirements.txt
docs/: CNAME  index.css  index.html  index.js  wrangler.jsonc
evaluation/: bench.py  evaluate.py  graph.py  parse_details.py
evaluation/config/: gemma-3-1b-it.yaml  jais-family-1p3b-chat.yaml  jais-family-590m-chat.yaml  qwen3-0p6b.yaml  qwen3-1p7b.yaml
evaluation/tasks/: arabic.txt  code.txt  english.txt  tasks.txt
init-eval/: evaluate.py
initial-evaluation/: evaluate.py
llmini/: main.py
llmini/evaluation/: bench.py  param.py  ppl.py
llmini/evaluation/config/: gemma-3-1b-it.yaml  jais-family-590m-chat.yaml  qwen3-0p6b.yaml  yehia-7b-preview.yaml
llmini/pruning/: helpers.py  prune.py
llmini/pruning/recipes/sparsegpt/: sparsegpt_50.yaml  sparsegpt_50_2of4 _owl.yaml  sparsegpt_50_2of4.yaml
llmini/pruning/recipes/wanda/: wanda_50.yaml  wanda_50_2of4.yaml  wanda_50_2of4_owl.yaml
llmini/quantizaton/: quantize.py
llmini/utils/: logging.py
models/: acegpt-v2-8b-chat.yaml  allam-7b-instruct-preview.yaml  fanar-1-9b-instruct.yaml  gemma-3-1b-it.yaml  gpt-oss-20b.yaml  jais-family-1p3b-chat.yaml  jais-family-590m-chat.yaml  qwen3-0p6b.yaml  qwen3-1p7b.yaml  qwen3-8b.yaml
tests/: env-test.py
utils/: helpers.py
web/: index.css  index.js
