[project]
name = "llmini"
version = "0.1.0"
description = "Code for \"Browser-based Locally Hosted Arabic LLM Optimization\"."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lm-eval[hf]",
]

[tool.uv]
cache-dir = ".cache/uv"

[tool.uv.sources]
lm-eval = { git = "https://github.com/EleutherAI/lm-evaluation-harness.git" }

[project.scripts]
llmini = "llmini.main:main"
